# Rust-axum-postgres-CRUD-app

./: .env  Cargo.toml  README.md  create.sql
src/: main.rs
